objects/MarketingTracking__c/MarketingTracking__c.object-meta.xml
<CustomObject>
    <description>Used to hold historical tracking information</description>
    <label>MarketingTracking</label>
    <nameField>
        <label>MarketingTracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarketingTracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>