objects/MarketingTracking__c/fields/opp_influence_stage__c.field-meta.xml
<CustomField>
    <fullName>opp_influence_stage__c</fullName>
    <label>opp-influence-stage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>