objects/MarketingTracking__c/fields/opp_influence_stage_rev__c.field-meta.xml
<CustomField>
    <fullName>opp_influence_stage_rev__c</fullName>
    <label>opp-influence-stage-rev</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>