objects/MarketingTracking__c/fields/opp_won_type__c.field-meta.xml
<CustomField>
    <fullName>opp_won_type__c</fullName>
    <label>opp-won-type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>