objects/MarketingTracking__c/fields/opp_won_type_rev__c.field-meta.xml
<CustomField>
    <fullName>opp_won_type_rev__c</fullName>
    <label>opp-won-type-rev</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>