objects/MarketingTracking__c/fields/pipeline_channel_revenue__c.field-meta.xml
<CustomField>
    <fullName>pipeline_channel_revenue__c</fullName>
    <description>pipeline revenue by channel</description>
    <label>pipeline-channel-revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>