objects/MarketingTracking__c/fields/q22015_won_type_rev__c.field-meta.xml
<CustomField>
    <fullName>q22015_won_type_rev__c</fullName>
    <label>q22015-won-type-rev</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>