objects/MarketingTracking__c/fields/q42015_pipe_chnl_rev__c.field-meta.xml
<CustomField>
    <fullName>q42015_pipe_chnl_rev__c</fullName>
    <label>q42015-pipe-chnl-rev</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>