objects/MarketingTracking__c/fields/ReportName__c.field-meta.xml
<CustomField>
    <fullName>ReportName__c</fullName>
    <label>ReportName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>